--- a/nicolas V.2/style.css
+++ b/nicolas V.2/style.css
@@ -2,3 +2,16 @@ body {
     background-color: rgba(135, 46, 180, 0.61);
         
 } 
+
+img {
+    position: absolute ;
+    top: 284px;
+    left: 40%;
+    width: 13%;
+}
+
+#yuri{
+width: 15%;
+top: 1155px;
+left: 5%;
+}
