--- a/produtos.css
+++ b/produtos.css
@@ -1,3 +1,15 @@
 header{
     background-color: rgba(135, 46, 180, 0.604);
 }
+
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
+}
+nav a{
+    text-transform: uppercase;
+    color:black;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
