--- a/produtos.css
+++ b/produtos.css
@@ -16,8 +16,8 @@ nav a{
 }
 img{
     top: 284px;
-    width:  870px;
-    height: 720px;
+    width:  250px;
+   
 }
 .caixa{
     position: relative;
@@ -39,5 +39,25 @@ nav{
 }
 .produtos li{
     display: inline-block;
-    
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 0;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
+}
+.produtos h2{
+    font-size: 30px;
+    font-weight: bold;
+
+}
+.produto-descricao{
+    font-size: 18px;
+}
+.produto-preco{
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: top;
 }
