--- a/style.css
+++ b/style.css
@@ -1,18 +1,104 @@
-body {
+header{
     background-color: rgba(14, 9, 17, 0.758);
-        
-} 
-
-img {
-    position: absolute ;
-    top: 287px;
-    left: 40%;
-    width: 13%;
+    padding: 20px;
 }
 
-#yuri{
-width: 15%;
-top: 1200px;
-left:28%;
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
 }
 
+nav a{
+    text-transform: uppercase;
+    color:rgb(0, 0, 0);
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
+
+nav a:hover{
+        color:#8204b8;
+    text-decoration: underline;
+}
+
+#logo{
+    width:250px;
+}
+
+img{
+    top: 284px;
+    width:  250px;
+}
+.caixa{
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+  
+}
+nav{
+    position: absolute;
+    top: 45px;
+    right: -283px;
+
+}
+.produtos{
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
+    
+}
+.produtos li{
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 0;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
+}
+
+.produtos li:hover{
+    border-color: #8204b8;
+}
+
+.produtos li:active{
+    border-color:blue;
+}
+
+.produtos li:hover h2{
+    font-size: 35px;
+    color:rgba(0, 0, 255, 0.679);
+}
+
+.produtos h2{
+    font-size: 30px;
+    font-weight: bold;
+
+}
+
+.produto-descricao{
+   
+    font-size: 18px;
+}
+.produto-preco{
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: top;
+}
+
+footer {
+    text-align: center;
+    background-color: rgba(14, 9, 17, 0.758); 
+    padding: 25px 0;
+}
+footer img{
+    width: 200px;
+}
+
+.copyright{
+    color:black;
+    font-size: 15px;
+    margin: 20px 0 0;
+}
