--- a/style.css
+++ b/style.css
@@ -79,7 +79,6 @@ nav{
 }
 
 .produto-descricao{
-   
     font-size: 18px;
 }
 .produto-preco{
@@ -101,4 +100,24 @@ footer img{
     color:black;
     font-size: 15px;
     margin: 20px 0 0;
+}
+
+main {
+    width: 940px;
+    margin: 0 auto;
+}
+form {
+    margin:35px 0;
+}
+form label{
+    display:block;
+    font-size: 25px;
+    margin:0 0 10px;
+}
+
+form input{
+    display: block;
+    margin: 0 0 20px;
+    padding: 07px 20px;
+    width: 50%;
 }
