--- a/style.css
+++ b/style.css
@@ -109,15 +109,19 @@ main {
 form {
     margin:35px 0;
 }
-form label{
+form label, form p{
     display:block;
     font-size: 25px;
     margin:0 0 10px;
 }
 
-form input{
+.input-padrao{
     display: block;
     margin: 0 0 20px;
     padding: 07px 20px;
     width: 50%;
+}
+
+.checkbox {
+    margin: 30px 0;
 }
