--- a/style.css
+++ b/style.css
@@ -122,6 +122,23 @@ form label, form p{
     width: 50%;
 }
 
-.checkbox {
+.checkbox{
     margin: 30px 0;
+}
+.enviar{
+    width: 40%;
+    padding: 15px 0;
+    background-color: rgb(4, 9, 17, 0.758);
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition: 0.6s all;
+    cursor: pointer;
+}
+
+.enviar:hover{
+    background-color: black;
+    transform: scale(1.2);
 }
